src/test/deca/context/valid/created/avec_objet/rule3.64/3.64.deca
// Test pour la règle 3.64
// Date: 18/01/2024
// Auteur: Jerome

class ClasseAvecVariable {
    int variable;

    void modifierEtAfficher() {
        this.variable = 10; // Assignation valide
        println("Variable: " + this.variable);
    }
}

class TestIdentificateursAffectables {
    void testerIdentificateursAffectables() {
        ClasseAvecVariable objet = new ClasseAvecVariable();
        objet.modifierEtAfficher();
    }
}

// Programme principal
{
    TestIdentificateursAffectables testProgramme = new TestIdentificateursAffectables();
    testProgramme.testerIdentificateursAffectables();
}
